--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,7 +78,7 @@ body {
   /* margin: 3rem; */
   margin-left: 20px;
   border-radius: 30px;
- /* transform: rotate(5deg);*/
+  transform: rotate(5deg);
   height: 28rem;
   width: 25rem;
 }
